syntax = 'proto3';

//option java_generic_services = true;
//option java_multiple_files = true;
//option java_package = "io.grpc.stream";
package grpc.stream;

service GreeterStream {
  rpc HelloStream (stream StreamRequest) returns (stream StreamResponse) {}
}

message StreamRequest {
  string name = 1;
}


message StreamResponse {
  string  name = 2;
}





